log/build_2025-02-28_00-45-21/me495_yolo/stderr.log
  File "/home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo/square_mover.py", line 142
    waypoints_world = [
                      ^
SyntaxError: '[' was never closed

